k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-cart-deployment
  namespace: shop-cart-ns
  labels:
    app: shop-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-cart
  template:
    metadata:
      labels:
        app: shop-cart
    spec:
      containers:
      - name: shop-cart
        image: dhruvmoradiya69000/shopping-cart:latest
        ports:
        - containerPort: 8080
