k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: shop-cart-ns
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
