k8s/shopapp-service.yml
apiVersion: v1
kind: Service

metadata:
  name: shop-cart-service
  namespace: shop-cart-ns

spec:
  selector:
    app: shop-cart
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
